<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/tripCardImage"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/wroclaw_placeholder" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tripCardImage"
                android:background="@drawable/background_transparent_white"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/tripCardType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="Wrocław"
                    android:textAppearance="@style/SecondaryText"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/tripCardEstimatedTime"
                    android:text="@string/trip_card_estimated_time"
                    android:textAppearance="@style/SecondaryText" />

                <TextView
                    android:id="@+id/tripCardEstimatedTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/textViewMinutes"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="120"
                    android:textAppearance="@style/SecondaryText"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewMinutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/trip_card_minutes"
                    android:textAppearance="@style/SecondaryText" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tripCardName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tripCardImage"
                android:layout_marginTop="12dp"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:text="@string/title"
                android:textAppearance="@style/PrimaryText"
                android:textSize="18sp" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/tripCardDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tripCardName"
                android:text="@string/trip_description"
                android:layout_margin="8dp"
                android:textAppearance="@style/SecondaryText"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tripCardDescription"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/tripCardButtonShowOnMap"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:text="@string/show_on_map"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>